# note-code

./: .gitmodules  CMakeLists.txt  pytest.py  readme.md
glad/: CMakeLists.txt  glad.c
glad/glad/: glad.h
grokking-note/: CMakeLists.txt  benchmark.cpp  graph.cpp  graph.h  graphtest.cpp  introduction.cpp  introduction.py  search.cpp  sort.cpp
opengl-note/: CMakeLists.txt  test.cpp  test_camera.cpp  test_shader.cpp  test_texture.cpp  test_triangle.cpp  test_window.cpp
opengl-note/camera/: camera.cpp  camera.h
opengl-note/driver/test_camera/: 1box.vs
opengl-note/driver/test_shader/: bias.vs  upsidedown.vs
opengl-note/driver/test_texture/: mix.fs  right.fs
opengl-note/driver/util/: inout.fs  inout.vs
opengl-note/program/: shader.cpp  shader.h  texture.cpp  texture.h
opengl-note/utils/: Func2Point.h  TestUtil.cpp  TestUtil.h
src/: CMakeLists.txt  main.cpp  test_shader.cpp  test_triangle.cpp  test_util.cpp  test_util.h  test_window.cpp
src/shader/: shader.cpp  shader.h
window/: CMakeLists.txt  main.cpp
